add proper presentation for new added vehicle

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.9.0",
+    "flat": "^5.0.2",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -34,6 +35,7 @@
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
     "@types/chart.js": "^2.9.30",
+    "@types/flat": "^5.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
